[package]
name = "tfp"
version = "0.1.0"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.7.3"
lazy_static = "1.4.0"
